--- a/index.html
+++ b/index.html
@@ -100,7 +100,8 @@
 							<li><a href="about-us" title="ABOUT US" itemprop="url">ABOUT US</a></li>
 							 <li><a href="our-menu" title="RESTAURANT DETAILS" itemprop="url">  MENU</a></li>
 							 <li><a href="gallery" title="FOOD GALLERY" itemprop="url">GALLERY</a></li>
-							 <li><a href="contact" title="CONTACT US" itemprop="url">CONTACT US</a></li>
+							 <li><a href="https://wa.me/916299347078?text=Hello%20Alters%20Kitchen%2C%20I%20want%20to%20enquire"title="Contact us on WhatsApp"target="_blank">CONTACT US </a></li>
+
 							  
 							</ul>
 							
