--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 							<li><a href="about-us" title="ABOUT US" itemprop="url">ABOUT US</a></li>
 							 <li><a href="our-menu" title="RESTAURANT DETAILS" itemprop="url">  MENU</a></li>
 							 <li><a href="gallery" title="FOOD GALLERY" itemprop="url">GALLERY</a></li>
-							 <li><a href="https://wa.me/916299347078?text=Hello%20Alters%20Kitchen%2C%20I%20want%20to%20enquire"title="Contact us on WhatsApp"target="_blank">CONTACT US </a></li>
+							 <li><a href="https://wa.me/919431287700?text=Hello%20Alters%20Kitchen%2C%20I%20want%20to%20enquiry"title="Contact us on WhatsApp"target="_blank">CONTACT US </a></li>
 
 							  
 							</ul>
@@ -463,7 +463,7 @@
         </footer>
         <div class="bottom-bar dark-bg text-center">
             <div class="container">
-                <p itemprop="description">2023 © Altars Kitchen All Rights Reserved. Design By <a class="red-clr" href="https://www.Alterskitchen.com" title="Satya" itemprop="url" target="_blank">Satya</a>.</p>
+                <p itemprop="description">2026 © Altars Kitchen All Rights Reserved. Design By <a class="red-clr" href="https://www.Alterskitchen.com" title="Satya" itemprop="url" target="_blank">Satya</a>.</p>
             </div>
         </div><!-- Bottom Bar -->
 
