--- a/index.html
+++ b/index.html
@@ -96,10 +96,10 @@
                 <span class="menu-close red-bg brd-rd3"><i class="fa fa-close"></i></span>
                 <div class="menu-lst">
                    <ul>
-							<li><a href="/" title="HOMEPAGE" itemprop="url">HOME </a></li>
-							<li><a href="about-us" title="ABOUT US" itemprop="url">ABOUT US</a></li>
-							 <li><a href="our-menu" title="RESTAURANT DETAILS" itemprop="url">  MENU</a></li>
-							 <li><a href="gallery" title="FOOD GALLERY" itemprop="url">GALLERY</a></li>
+							<li>HOME </li>
+							<li>ABOUT US</li>
+							 <li> MENU</li>
+							 <li>GALLERY</li>
 							 <li><a href="https://wa.me/919431287700?text=Hello%20Alters%20Kitchen%2C%20I%20want%20to%20enquiry"title="Contact us on WhatsApp"target="_blank">CONTACT US </a></li>
 
 							  
