--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@
         </footer>
         <div class="bottom-bar dark-bg text-center">
             <div class="container">
-                <p itemprop="description">2026 © Altars Kitchen All Rights Reserved. Design By <a class="red-clr" href="https://www.Alterskitchen.com" title="Satya" itemprop="url" target="_blank">Satya</a>.</p>
+                <p itemprop="description">2026 © Altars Kitchen All Rights Reserved. Design By <a class="red-clr" href="https://thealtars.in/" title="Satya" itemprop="url" target="_blank">Satya</a>.</p>
             </div>
         </div><!-- Bottom Bar -->
 
